tests/executionspec/snapshots/execution_spec__test-batch-operator-post.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "GroupBy is only supported for GET requests",
    "trace": [
      "Query",
      "user",
      "@http"
    ],
    "description": null
  }
]
