tests/executionspec/snapshots/execution_spec__test-field-already-implemented-from-Interface.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "no argument 'input' found",
    "trace": [
      "Query",
      "user",
      "@http",
      "path"
    ],
    "description": null
  },
  {
    "message": "Field is already implemented from interface",
    "trace": [
      "User",
      "userId",
      "@modify"
    ],
    "description": null
  },
  {
    "message": "Field is already implemented from interface",
    "trace": [
      "User",
      "userName",
      "@modify"
    ],
    "description": null
  }
]
