tests/executionspec/snapshots/execution_spec__test-graphqlsource-no-base-url.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "No base URL defined",
    "trace": [
      "Post",
      "user",
      "@graphQL"
    ],
    "description": null
  }
]
