tests/executionspec/snapshots/execution_spec__test-grpc-invalid-proto-id.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "Protobuf files were not specified in the config",
    "trace": [
      "Query",
      "news",
      "@grpc"
    ],
    "description": null
  }
]
